--- a/achievements.html
+++ b/achievements.html
@@ -1,34 +1,48 @@
 <html>
 	<head>
 		<!-- Latest compiled and minified CSS -->
-		<script src="addFunction.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="achievements.css">
+		<script src="achievements.js"></script>
+		<script type="text/javascript" src="data.json"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
 	</head>
-	<body>
+	<body onload="loadAchievementsPage()">
 		<div class="container-fluid">
 			<div id="achievementsList">
 				<div>
-					<h1 class="text-center text-white"><i>Achievements List</i></h1>
+					<h1 class="text-center text-white"><i>Achievements</i></h1>
 					<hr />
 				</div>
-				<div class="achievement vcenter">
-					<h3>Patty recently got engaged to Laura Goodman!</h3>
+				<div class="achievement vcenter" id="slotcontainer0">
+					<h3 id="slot0"></h3>
 				</div>
-				<div class="achievement vcenter">
-					<h3>Gus recently won another Jury Award!</h3>
+				<div class="achievement vcenter" id="slotcontainer1">
+					<h3 id="slot1"></h3>
 				</div>
-				<div class="achievement vcenter">
-					<h3>Chris won a Nobel Prize!</h3>
+				<div class="achievement vcenter" id="slotcontainer2">
+					<h3 id="slot2"></h3>
 				</div>
+				<div class="achievement vcenter" id="slotcontainer3">
+					<h3 id="slot3"></h3>
+				</div>
+				<div class="achievement vcenter" id="slotcontainer4">
+					<h3 id="slot4"></h3>
+				</div>
+			</div>
+			<div id="selectDivToRemove">
+				<h1 class="text-center">Select achievement to remove</h1>
 			</div>
 			<a href="ahub.html">
 				<div class="return">
 					<p class="text-center textReturn">Return home</p>
 				</div>
 			</a>
-			<div class="addAnAchievement">
-				<p class="text-center textReturn" onclick="addSomething('achievement', 'achievementsList')">Add an achievement</p>
+			<div class="addAnAchievement" onclick="addAchievement()">
+				<p class="text-center textReturn">Add an achievement</p>
+			</div>
+			<div class="deleteAnAchievement">
+				<p class="text-center textReturn" onclick="removeAchievement()">Delete an achievement</p>
 			</div>
 		</div>
 	</body>
