--- a/reminders.html
+++ b/reminders.html
@@ -3,11 +3,11 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="reminders.css">
-		<script src="addFunction.js"></script>
+		<script src="reminders.js"></script>
 		<script type="text/javascript" src="data.json"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
 	</head>
-	<body onload="load()">
+	<body onload="loadRemindersPage()">
 		<div class="container-fluid">
 			<div id="remindersList">
 				<div>
@@ -38,11 +38,11 @@
 					<p class="text-center textReturn">Return home</p>
 				</div>
 			</a>
-			<div class="addAReminder" onclick="addSomething('reminder', 'remindersList')">
+			<div class="addAReminder" onclick="addReminder()">
 				<p class="text-center textReturn">Add a reminder</p>
 			</div>
 			<div class="deleteAReminder">
-				<p class="text-center textReturn" onclick="removeSomething('reminder', 'remindersList')">Delete a reminder</p>
+				<p class="text-center textReturn" onclick="removeReminder()">Delete a reminder</p>
 			</div>
 		</div>
 	</body>
