finished wua page, updated JS for reminders

--- a/wua.html
+++ b/wua.html
@@ -15,35 +15,35 @@
 			<div class="row" id="tableContainer">
 				<table class="text-center lightPink" id="wuaTable">
 					<tr>
-						<th class="text-center tableBorder bottomTB upperLeft" id="pattyLocations0"><h3>Patty's Locations</h3></th>
-						<th class="text-center tableBorder bottomTB" id="gusLocations1"><h3>Gus's Locations</h3></th>
+						<th class="text-center patty bottomTB upperLeft" id="pattyLocations0"><h3>Patty's Locations</h3></th>
+						<th class="text-center gus bottomTB" id="gusLocations1"><h3>Gus's Locations</h3></th>
 						<th class="text-center bottomTB upperRight" id="chrisLocations2"><h3>Chris's Locations</h3></th>
 					</tr>
-					<tr>
-						<td class="tableBorder"></td>
-						<td class="tableBorder"></td>
-						<td></td>
+					<!--<tr>
+						<td class="patty"></td>
+						<td class="gus"></td>
+						<td class="chris"></td>
 					</tr>
 					<tr>
-						<td class="tableBorder"></td>
-						<td class="tableBorder"></td>
-						<td></td>
+						<td class="patty"></td>
+						<td class="gus"></td>
+						<td class="chris"></td>
 					</tr>
 					<tr>
-						<td class="tableBorder"></td>
-						<td class="tableBorder"></td>
-						<td></td>
+						<td class="patty"></td>
+						<td class="gus"></td>
+						<td class="chris"></td>
 					</tr>
 					<tr>
-						<td class="tableBorder"></td>
-						<td class="tableBorder"></td>
-						<td></td>
+						<td class="patty"></td>
+						<td class="gus"></td>
+						<td class="chris"></td>
 					</tr>
 					<tr>
-						<td class="tableBorder"></td>
-						<td class="tableBorder"></td>
-						<td></td>
-					</tr>
+						<td class="patty"></td>
+						<td class="gus"></td>
+						<td class="chris"></td>
+					</tr>-->
 				</table>
 			</div>
 			<div class="row" id="selectDivToRemove">
