--- a/ahub.html
+++ b/ahub.html
@@ -25,25 +25,25 @@
 							</tr>
 							<tr class="wuaGreyTR">
 								<td>PATTY</td>
-								<td>China</td>
-								<td>One week</td>
+								<td id="where0">China</td>
+								<td id="when0">One week</td>
 							</tr>
 							<tr class="wuaGreyTR">
 								<td>GUS</td>
-								<td>Makerspace</td>
-								<td>7:00P</td>
+								<td id="where1">Makerspace</td>
+								<td id="when1">7:00P</td>
 							</tr>
 							<tr>
 								<td>CHRIS</td>
-								<td>Charlotte, NC</td>
-								<td>Never</td>
+								<td id="where2">Charlotte, NC</td>
+								<td id="when2">Never</td>
 							</tr>
 						</table>
 					</div>
 					<div class="mainBorder" id="choresPanel">
 						<h3 class="text-center text-white"><a href="choresList.html">Chores List</a></h3>
 						<hr />
-						<table class="text-center" id="wuaTable">
+						<table class="text-center">
 							<tr class="incompleteTask">
 								<td width="15%">P</td>
 								<td width="75%">Take out trash</td>
@@ -66,7 +66,7 @@
 					<div class="col mainBorder" id="reminderPanel">
 						<h3 class="text-center text-white"><a href="reminders.html">Reminders</a></h3>
 						<hr />
-						<table class="text-center" id="wuaTable">
+						<table class="text-center">
 							<tr id="noReminders">
 								<td width="90%" class="text-center" style="border-radius: 20px;text-size:20px;">No reminders to show.</td>
 							</tr>
@@ -87,7 +87,7 @@
 					<div class="col mainBorder" id="achievementsPanel">
 						<h3 class="text-center text-white"><a href="achievements.html">Recent Achievements</a></h3>
 						<hr />
-						<table class="text-center" id="wuaTable">
+						<table class="text-center">
 							<tr id="noAchievements">
 								<td width="90%" class="text-center" style="border-radius: 20px;text-size:20px;">No achievements to show.<br />Go do something!</td>
 							</tr>
