--- a/reminders.html
+++ b/reminders.html
@@ -14,20 +14,22 @@
 					<h1 class="text-center text-white"><i>Reminders</i></h1>
 					<hr />
 				</div>
-				<div class="reminder vcenter" id="slotcontainer0">
-					<h3 id="slot0"></h3>
-				</div>
-				<div class="reminder vcenter" id="slotcontainer1">
-					<h3 id="slot1"></h3>
-				</div>
-				<div class="reminder vcenter" id="slotcontainer2">
-					<h3 id="slot2"></h3>
-				</div>
-				<div class="reminder vcenter" id="slotcontainer3">
-					<h3 id="slot3"></h3>
-				</div>
-				<div class="reminder vcenter" id="slotcontainer4">
-					<h3 id="slot4"></h3>
+				<div id="reminderPods">
+					<!--<div class="reminder vcenter">
+						<h3></h3>
+					</div>
+					<div class="reminder vcenter">
+						<h3 id="slot1"></h3>
+					</div>
+					<div class="reminder vcenter">
+						<h3 id="slot2"></h3>
+					</div>
+					<div class="reminder vcenter">
+						<h3 id="slot3"></h3>
+					</div>
+					<div class="reminder vcenter">
+						<h3 id="slot4"></h3>
+					</div>-->
 				</div>
 			</div>
 			<div id="selectDivToRemove">
