calendar added, date functions cleaned up

--- a/ahub.html
+++ b/ahub.html
@@ -5,6 +5,13 @@
 		<link rel="stylesheet" type="text/css" href="ahub.css">
 		<script src="ahub.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
+		<script>
+			window.onload = function() {
+				var dateString = "dates=" + getCurrentDate() + "/" + getCurrentDate() + "&amp;";
+				var iframeString = '<iframe id="gCal" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=DAY&amp;'+dateString+'height=600&amp;wkst=1&amp;bgcolor=%23EEEEEE&amp;src=<MY CALENDAR>&amp;color=%23333333&amp;ctz=America%2FNew_York" style="border-width:0;margin:0% 5%;border-radius:10px;" width="90%" height="82.5%;" frameborder="0" scrolling="no"></iframe>'
+			    $('#dayCalendarPanel').append(iframeString);
+			};
+		</script>
 	</head>
 	<body onload="updateClock(); loadReminders(); loadAchievements();">
 		<div class="container-fluid">
