calendar screen finished, font update, login & filter added

--- a/achievements.html
+++ b/achievements.html
@@ -3,6 +3,8 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="achievements.css">
+		<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="quicksand.css">
 		<script src="entries.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
 	</head>
@@ -26,8 +28,8 @@
 			<div class="addAnAchievement" onclick="addEntry('achievement')">
 				<p class="text-center textReturn">Add an achievement</p>
 			</div>
-			<div class="deleteAnAchievement">
-				<p class="text-center textReturn" onclick="removeEntry('achievement')">Delete an achievement</p>
+			<div class="deleteAnAchievement" onclick="removeEntry('achievement')">
+				<p class="text-center textReturn">Delete an achievement</p>
 			</div>
 		</div>
 	</body>
