--- a/reminders.html
+++ b/reminders.html
@@ -3,6 +3,8 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="reminders.css">
+		<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="quicksand.css">
 		<script src="entries.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
 	</head>
@@ -10,25 +12,10 @@
 		<div class="container-fluid">
 			<div id="remindersList">
 				<div>
-					<h1 class="text-center text-white"><i>Reminders</i></h1>
+					<h1 class="text-center text-white"><b>Reminders</b></h1>
 					<hr />
 				</div>
 				<div id="reminderPods">
-					<!--<div class="reminder vcenter">
-						<h3></h3>
-					</div>
-					<div class="reminder vcenter">
-						<h3 id="slot1"></h3>
-					</div>
-					<div class="reminder vcenter">
-						<h3 id="slot2"></h3>
-					</div>
-					<div class="reminder vcenter">
-						<h3 id="slot3"></h3>
-					</div>
-					<div class="reminder vcenter">
-						<h3 id="slot4"></h3>
-					</div>-->
 				</div>
 			</div>
 			<div id="selectDivToRemove">
@@ -42,8 +29,8 @@
 			<div class="addAReminder" onclick="addEntry('reminder')">
 				<p class="text-center textReturn">Add a reminder</p>
 			</div>
-			<div class="deleteAReminder">
-				<p class="text-center textReturn" onclick="removeEntry('reminder')">Delete a reminder</p>
+			<div class="deleteAReminder" onclick="removeEntry('reminder')">
+				<p class="text-center textReturn">Delete a reminder</p>
 			</div>
 		</div>
 	</body>
