--- a/ahub.html
+++ b/ahub.html
@@ -10,12 +10,28 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
 		<script>
 			window.onload = function() {
+				var myData = JSON.parse(localStorage.getItem('loginInfo'));
+				var loggedin, j=0,
+					people = ['patty', 'gus', 'chris'];
 				var dateString = "dates=" + getCurrentDate() + "/" + getCurrentDate() + "&amp;",
 					iframeString = '<iframe id="gCal" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=DAY&amp;'+dateString+'height=600&amp;wkst=1&amp;bgcolor=%23EEEEEE&amp;src=ncsu.edu_dgt0if41b0j1vok4j4bqiuu46g%40group.calendar.google.com&amp;color=%235F6B02&amp;src=ncsu.edu_oft0hmrtl6g9bkrap93ed7fn1c%40group.calendar.google.com&amp;color=%23333333&amp;src=ncsu.edu_ld9pqjofrinf8olrr40138qglo%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style="border-width:0;margin:0% 5%;border-radius:10px;" width="90%" height="80%;" frameborder="0" scrolling="no"></iframe>'
 			    $('#dayCalendarPanel').append(iframeString);
 			    $('#enterYourPassword').hide();
 			    $('#createYourPassword').hide();
 			    $('#loginBlock').hide();
+			    $('#loginText').hide();
+			    $('#logoutText').hide();
+			    for( var i=0 ; i<3 ; i++ ) {
+			    	var person = people[i];
+			    	j++;
+			    	if( myData[person].loggedin == 'yes' ) {
+			    		document.getElementById('logoutTextBold').innerHTML = "Logged in as " + capitalizeFirstLetter(person) + " - Click to Logout";
+			    		$('#logoutText').show();
+			    		j--;
+			    	} else if( j == 3 ){
+			    		$('#loginText').show();
+			    	}
+			    }
 			};
 		</script>
 	</head>
@@ -29,9 +45,9 @@
 					<span class="col-xs-2"></span>
 					<span class="loginOption col-xs-2 text-center text-white" id="pattyLogin" onclick='selectPerson("patty")'>Patty</span>
 					<span class="col-xs-1"></span>
-					<span class="loginOption col-xs-2 text-center text-white" id="gusLogin">Gus</span>
+					<span class="loginOption col-xs-2 text-center text-white" id="gusLogin" onclick='selectPerson("gus")'>Gus</span>
 					<span class="col-xs-1"></span>
-					<span class="loginOption col-xs-2 text-center text-white" id="chrisLogin">Chris</span>
+					<span class="loginOption col-xs-2 text-center text-white" id="chrisLogin" onclick='selectPerson("chris")'>Chris</span>
 					<span class="col-xs-2"></span>
 				</div>
 				<div id="enterYourPassword">
@@ -39,8 +55,8 @@
 						<span class="text-center"><h1><b>Enter your password</b></h1></span>
 					</div>
 					<div class="row text-center">
-						<form onsubmit>
-							<input type="password" name="myPassword">
+						<form id="enterForm" onsubmit='validateForm("enter")'>
+							<input type="password" name="password">
 							<input type="submit">
 						</form>
 					</div>
@@ -50,7 +66,7 @@
 						<span class="text-center"><h1><b>Create your password</b></h1></span>
 					</div>
 					<div class="row text-center">
-						<form method="POST" id="passwordForm" onsubmit='validateForm()'>
+						<form method="POST" id="createForm" onsubmit='validateForm("create")'>
 							<input type="password" name="password">
 							<input type="submit">
 						</form>
@@ -107,7 +123,8 @@
 							</tr>
 						</table>
 					</div>
-					<div class="optionButton" id="loginText" onclick="showLogin()"><h5 class="text-center"><b>Login<b></h5></div>
+					<div class="optionButton" id="loginText" onclick="showLogin()"><h6 class="text-center"><b>Login</b></h6></div>
+					<div class="optionButton" id="logoutText" onclick="logout()"><h6 class="text-center"><b id="logoutTextBold"></b></h5></div>
 				</div>
 				<div class="col mainBorder" id="dayCalendarPanel">
 					<h1 class="text-center text-white"><a href="calendar.html">Calendar</a></h1>
@@ -156,7 +173,7 @@
 							</tr>
 						</table>
 					</div>
-					<div class="optionButton" id="filterText"><h5 class="text-center"><b>Filter<b></h5></div>
+					<div class="optionButton" id="filterText"><h6 class="text-center"><b>Filter<b></h6></div>
 				</div>
 			</div>
 		</div>
