--- a/achievements.html
+++ b/achievements.html
@@ -6,6 +6,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="quicksand.css">
 		<script src="entries.js"></script>
+		<script src="login.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
 	</head>
 	<body onload="loadEntryPage('achievement')">
