--- a/ahub.html
+++ b/ahub.html
@@ -5,7 +5,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="quicksand.css">
 		<link rel="stylesheet" type="text/css" href="ahub.css">
-		<script src="ahub.js"></script>
+		<script src="ahub.js" type="text/javascript"></script>
 		<script src="login.js"></script>
 		<script src="filter.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
@@ -40,10 +40,14 @@
 			    		$('#filterOffText').show();
 			    	}
 			    }
+			    updateClock();
+			    loadEntries('reminder');
+			    loadEntries('achievement');
+			    curveCorners();
 			};
 		</script>
 	</head>
-	<body onload="updateClock(); loadEntries('reminder'); loadEntries('achievement');">
+	<body>
 		<div class="container-fluid">
 			<div id="loginBlock">
 				<div class="row" style="margin:8% 0% 8% 0%">
@@ -118,8 +122,8 @@
 						<hr />
 						<table class="text-center">
 							<tr class="incompleteTask">
-								<td width="15%" class="upperLeft">P</td>
-								<td width="75%" class="upperRight">Take out trash</td>
+								<td width="15%" class=>P</td>
+								<td width="75%" class=>Take out trash</td>
 							</tr>
 							<tr class="incompleteTask">
 								<td width="15%">G</td>
@@ -147,16 +151,16 @@
 								<td width="90%" class="text-center" style="border-radius: 20px;text-size:20px;">No reminders to show.</td>
 							</tr>
 							<tr class="incompleteTask">
-								<td width="15%" class="upperLeft" id="reminderOwner0"></td>
-								<td width="75%" class="upperRight" id="reminder0"></td>
+								<td width="15%" id="reminderOwner0"></td>
+								<td width="75%" id="reminder0"></td>
 							</tr>
 							<tr class="incompleteTask">
 								<td width="15%" id="reminderOwner1"></td>
 								<td width="75%" id="reminder1"></td>
 							</tr>
 							<tr class="incompleteTask">
-								<td width="15%" class="lowerRight" id="reminderOwner2"></td>
-								<td width="75%" class="lowerLeft" id="reminder2"></td>
+								<td width="15%" id="reminderOwner2"></td>
+								<td width="75%" id="reminder2"></td>
 							</tr>
 						</table>
 					</div>
@@ -168,20 +172,20 @@
 								<td width="90%" class="text-center" style="border-radius: 20px;text-size:20px;">No achievements to show.<br />Go do something!</td>
 							</tr>
 							<tr class="incompleteTask">
-								<td width="15%" class="upperLeft" id='achievementOwner0'></td>
-								<td width="75%" class="upperRight" id="achievement0"></td>
+								<td width="15%" id='achievementOwner0'></td>
+								<td width="75%" id="achievement0"></td>
 							</tr>
 							<tr class="incompleteTask">
 								<td width="15%" id='achievementOwner1'></td>
 								<td width="75%" id="achievement1"></td>
 							</tr>
 							<tr class="incompleteTask">
-								<td width="15%" class="lowerRight" id='achievementOwner2'></td>
-								<td width="75%" class="lowerLeft" id="achievement2"></td>
+								<td width="15%" id='achievementOwner2'></td>
+								<td width="75%" id="achievement2"></td>
 							</tr>
 						</table>
 					</div>
-					<div class="optionButton" id="filterOnText" onclick='filter()'><h6 class="text-center"><b id="filterOn"><b></h6></div>
+					<div class="optionButton" id="filterOnText" onclick='defilter()'><h6 class="text-center"><b id="filterOn"><b></h6></div>
 					<div class="optionButton" id="filterOffText" onclick='filter()'><h6 class="text-center"><b id="filterOff">Filter<b></h6></div>
 				</div>
 			</div>
