--- a/reminders.html
+++ b/reminders.html
@@ -12,7 +12,7 @@
 		<div class="container-fluid">
 			<div id="remindersList">
 				<div>
-					<h1 class="text-center text-white"><b>Reminders</b></h1>
+					<h1 class="text-center text-white"><i>Reminders</i></h1>
 					<hr />
 				</div>
 				<div id="reminderPods">
