--- a/wua.html
+++ b/wua.html
@@ -11,11 +11,11 @@
 	<body onload="loadWUAPage()">
 		<div class="container-fluid">
 			<div>
-				<h1 class="text-center text-white"><b>Where is everyone?</b></h1>
+				<h1 class="text-center text-white"><i>Where is everyone?</i></h1>
 				<hr />
 			</div>
 			<div class="row" id="tableContainer">
-				<table class="text-center lightPink" id="wuaTable">
+				<table class="text-center lightBrown" id="wuaTable">
 					<tr>
 						<th class="text-center patty bottomTB upperLeft" id="pattyLocations0"><h3>Patty's Locations</h3></th>
 						<th class="text-center gus bottomTB" id="gusLocations1"><h3>Gus's Locations</h3></th>
