fixed filters and adding and deleting entries

--- a/ahub.html
+++ b/ahub.html
@@ -23,7 +23,7 @@
 		<div class="container-fluid">
 			<div id="loginBlock">
 				<div class="row" style="margin:8% 0% 8% 0%">
-					<span class="text-center"><h1><b>Select your name</b></h1></span>
+					<span class="text-center"><h1>Select your name</h1></span>
 				</div>
 				<div class="row">
 					<span class="col-xs-2"></span>
@@ -36,7 +36,7 @@
 				</div>
 				<div id="enterYourPassword">
 					<div class="row" style="margin:8% 0% 8% 0%">
-						<span class="text-center"><h1><b>Enter your password</b></h1></span>
+						<span class="text-center"><h1>Enter your password</h1></span>
 					</div>
 					<div class="row text-center">
 						<form method="POST" id="enterForm" onsubmit='validateForm("enter")'>
@@ -47,7 +47,7 @@
 				</div>
 				<div id="createYourPassword">
 					<div class="row" style="margin:8% 0% 8% 0%">
-						<span class="text-center"><h1><b>Create your password</b></h1></span>
+						<span class="text-center"><h1>Create your password</h1></span>
 					</div>
 					<div class="row text-center">
 						<form method="POST" id="createForm" onsubmit='validateForm("create")'>
