--- a/choresList.html
+++ b/choresList.html
@@ -1,55 +1,78 @@
+<!-- WORKING ON CHORE ADDITION SCREEN (id='choreForm') -->
+
 <html>
 	<head>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="choresList.css">
-		<link href='quicksand.css' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="quicksand.css">
+		<script>
+			window.onload = function() {
+				$('#choreCreation').hide();
+				loadChorePage();
+			}
+		</script>
+		<script src="chores.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
 	</head>
 	<body>
 		<div class="container-fluid">
+			<div id="choreCreation" style="z-index:9999">
+				<div class="row text-center">
+					<form method="POST" id="choreForm" onsubmit='submitChore()'>
+						<div class="row" style="margin:8% 0% 8% 0%">
+							<span class="text-center" style="color:#282828"><h1>Enter a chore</h1></span>
+						</div>
+						<input type="text" name="choreName">
+						<div class="row" style="margin:8% 0% 8% 0%">
+							<span class="text-center" style="color:#282828"><h1>Select a frequency</h1></span>
+						</div>
+						<table id="choreOptionTable">
+							<tr>
+								<td class="choreOption" onclick="selectFrequency(this)">Daily</td>
+								<td class="choreOption" onclick="selectFrequency(this)">Twice a week</td>
+								<td class="choreOption" onclick="selectFrequency(this)">Weekly</td>
+							</tr>
+							<tr>
+								<td class="choreOption" onclick="selectFrequency(this)">Biweekly</td>
+								<td class="choreOption" onclick="selectFrequency(this)">Monthly</td>
+								<td class="choreOption" onclick="selectFrequency(this)">Bimonthly</td>
+							</tr>
+						</table>
+						<input type="submit" id="submitButton" style='margin:8% 0%'>
+					</form>
+				</div>
+			</div>
 			<div>
 				<h1 class="text-center text-white"><i>Chores List</i></h1>
 				<hr />
 			</div>
-			<div class="row tableContainer">
-				<table class="text-center lightPink" id="wuaTable">
+			<div class="row" id="tableContainer">
+				<table class="text-center lightBrown" id="choreTable">
 					<tr>
-						<th class="text-center tableBorder bottomTB leftCorner"><h3>Patty's Locations</h3></th>
-						<th class="text-center tableBorder bottomTB"><h3>Gus's Locations</h3></th>
-						<th class="text-center bottomTB"><h3>Chris's Locations</h3></th>
-					</tr>
-					<tr>
-						<td class="tableBorder">Home</td>
-						<td class="tableBorder">Home</td>
-						<td>Home</td>
-					</tr>
-					<tr>
-						<td class="tableBorder">Main Campus</td>
-						<td class="tableBorder">Main Campus</td>
-						<td>Main Campus</td>
-					</tr>
-					<tr>
-						<td class="tableBorder">Centennial Campus</td>
-						<td class="tableBorder">Centennial Campus</td>
-						<td>Centennial Campus</td>
-					</tr>
-					<tr>
-						<td class="tableBorder">Parent's House</td>
-						<td class="tableBorder">Parent's House</td>
-						<td>Parent's House</td>
-					</tr>
-					<tr>
-						<td class="tableBorder">Stefan's House</td>
-						<td class="tableBorder">Makerspace</td>
-						<td>D.H. Hill</td>
+						<th class="text-center task bottomTB upperLeft" id="pattyLocations0"><h3>Chore</h3></th>
+						<th class="text-center freq bottomTB" id="gusLocations1"><h3>Frequency</h3></th>
+						<th class="text-center bottomTB upperRight" id="chrisLocations2"><h3>Last Completed By</h3></th>
 					</tr>
 				</table>
 			</div>
-			<a href="ahub.html">
-				<div class="return">
-					<p class="text-center textReturn">Return home</p>
+			<!-- <div class="row" id="selectDivToRemove">
+				<h1 class="text-center">Whose column of locations are you changing?</h1>
+			</div> -->
+			<div class="row">
+				<a href="ahub.html">
+					<div class="return">
+						<p class="text-center textReturn">Return home</p>
+					</div>
+				</a>
+				<div class="addALocation" onclick="addChore()">
+					<p class="text-center textReturn">Add a chore</p>
 				</div>
-			</a>
+				<div class="removeALocation" onclick="removeLocation()">
+					<p class="text-center textReturn" >Delete a chore</p>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
