chores page complete

--- a/choresList.html
+++ b/choresList.html
@@ -57,19 +57,19 @@
 					</tr>
 				</table>
 			</div>
-			<!-- <div class="row" id="selectDivToRemove">
-				<h1 class="text-center">Whose column of locations are you changing?</h1>
-			</div> -->
+			<div class="row" id="selectDivToRemove">
+				<h1 class="text-center">Select the chore you wish to remove.</h1>
+			</div>
 			<div class="row">
 				<a href="ahub.html">
 					<div class="return">
 						<p class="text-center textReturn">Return home</p>
 					</div>
 				</a>
-				<div class="addALocation" onclick="addChore()">
+				<div class="addChore" onclick="addChore()">
 					<p class="text-center textReturn">Add a chore</p>
 				</div>
-				<div class="removeALocation" onclick="removeLocation()">
+				<div class="removeChore" onclick="removeChore()">
 					<p class="text-center textReturn" >Delete a chore</p>
 				</div>
 			</div>
