--- a/reminders.html
+++ b/reminders.html
@@ -11,27 +11,38 @@
 	<body onload="loadEntryPage('reminder')">
 		<div class="container-fluid">
 			<div id="remindersList">
-				<div>
-					<h1 class="text-center text-white"><i>Reminders</i></h1>
-					<hr />
+				<div class="row">
+					<div class='col-md-1'></div>
+					<div class='col-md-4'>
+						<h1 class="text-white text-center" style="margin-top:7%;"><i>Reminders</i></h1>
+					</div>
+					<div class='col-md-2'>
+						<a href="ahub.html">
+							<div class='return'>
+								<p class="text-center textReturn">Return home</p>
+							</div>
+						</a>
+					</div>
+					<div class='col-md-2'>
+						<div class="addAReminder" onclick="addEntry('reminder')">
+							<p class="text-center textReturn">Add a reminder</p>
+						</div>
+					</div>
+					<div class='col-md-2'>
+						<div class="deleteAReminder" onclick="removeEntry('reminder')">
+							<p class="text-center textReturn">Delete a reminder</p>
+						</div>
+					</div>
+					<div class='col-md-1'></div>
 				</div>
+				<hr />
 				<div id="reminderPods">
 				</div>
 			</div>
 			<div id="selectDivToRemove">
 				<h1 class="text-center">Select reminder to remove</h1>
 			</div>
-			<a href="ahub.html">
-				<div class="return">
-					<p class="text-center textReturn">Return home</p>
-				</div>
-			</a>
-			<div class="addAReminder" onclick="addEntry('reminder')">
-				<p class="text-center textReturn">Add a reminder</p>
-			</div>
-			<div class="deleteAReminder" onclick="removeEntry('reminder')">
-				<p class="text-center textReturn">Delete a reminder</p>
-			</div>
+			
 		</div>
 	</body>
 </html>
