chore timer completed

--- a/ahub.html
+++ b/ahub.html
@@ -13,6 +13,7 @@
 			window.onload = function() {
 				bootup();
 			    updateClock();
+			    updateChoreTimes();
 			    loadEntries('reminder');
 			    loadEntries('achievement');
 			    loadChores();
@@ -65,7 +66,7 @@
 			<div class="row">
 				<div class="leftNarrowStack">
 					<div class="mainBorder" id="wuaPanel">
-						<h3 class="text-center text-white"><a href="wua.html">Where is everyone?</a></h3>
+						<h3 class="text-center text-white"><a href="wua.html">Guestbook</a></h3>
 						<hr />
 						<table class="text-center" id="wuaTable">
 							<tr class="wuaGreyTR">
